# jlc-comfyui-nodes

./: .gitignore  README.md  __init__.py  jlc-comfyui-nodes-structure.txt  jlc-structure-mapper.ps1  jlc_custom_nodes_versions.py  pyproject.toml
assets/workflows/: JLC_ControlNet_Orchestrator_Advanced_WorkFlow.json  jlc_ControlNet_Apply_(Advanced)-Workflow.json  jlc_ControlNet_Apply_Advanced.json  jlc_controlnet_composition.json
assets/workflows/Release_1.0/: JLC_ControlNet_Orchestrator_WorkFlow.json  jlc_padded_image_Basic_Infill_Outfill.json  jlc_padded_image_Best_Infill_Outfill.json
assets/workflows/Release_2.0/: jlc_All_In_One_workflow.json  jlc_ControlNet_Auxiliary_Preproc_workflow.json  jlc_ControlNet_Composition.json  jlc_LoRA_loaders.json  jlc_Orchestrator_Advanced_workflow.json  jlc_Padded_Image_Infill_Outfill.json
docs/: controlnet-aux.md  controlnet-composition.md  lora-loaders.md  padded-image-latent.md  utility-nodes.md
docs/technical_paper/: JLC_Flux1_NonRecursive_ControlNet_Technical_Paper.tex
nodes/: jlc_controlnet_apply.py  jlc_controlnet_apply_advanced.py  jlc_controlnet_composition.py  jlc_controlnet_composition_core.py  jlc_controlnet_nonrecursive_core.py  jlc_controlnet_orchestrator.py  jlc_controlnet_orchestrator_adv.py  jlc_controlnet_orchestrator_adv_dynamic.py  jlc_controlnet_orchestrator_hyper.py  jlc_padded_image.py  jlc_padded_latent.py  jlc_seed_generator.py
nodes/controlnet_aux_nodes/: jlc_controlnet_aux_preproc_lists.py  jlc_controlnet_aux_preproc_wrapper.py
nodes/engines/: jlc_model_cache_core.py
nodes/lora_loader_nodes/: jlc_dynamic_lora_loader_block_weight_model_clip.py  jlc_dynamic_lora_loader_block_weight_model_only.py  jlc_dynamic_lora_loader_model_clip.py  jlc_dynamic_lora_loader_model_only.py  jlc_dynamic_lora_loader_shared_block_weight_model_clip.py  jlc_dynamic_lora_loader_shared_block_weight_model_only.py  jlc_lora_dynamic_core.py  jlc_lora_loader_legacy_dynamic_wrappers.py  jlc_lora_model_only_filter.py
nodes/util_nodes/: TODO_seed_generator_randomize_replay.md  jlc_load_and_resize_image.py  jlc_resize_image.py  jlc_seed_generator.py  jlc_stage_boundary_vram_cleanup.py
web/: jlc_dynamic_controlnet_aux_preproc_visibility.js  jlc_dynamic_controlnet_composition_visibility.js  jlc_dynamic_controlnet_orchestrator_adv_visibility.js  jlc_dynamic_controlnet_orchestrator_visibility.js  jlc_dynamic_lora_loader_visibility.js  jlc_frontend_boolean_and.js  jlc_load_and_resize_image_visibility.js  jlc_node_icons.js  jlc_seed_display.js
