[project]
name = "jlc-comfyui-nodes"
version = "1.1.3"
"description" = "A collection of workflow-focused ComfyUI nodes designed to simplify, standardize, and optimize image generation pipelines. Includes tools for image padding with unified mask generation for single-pass inpainting and outpainting, a structured ControlNet application system with deterministic chaining and optional session-level caching, and a non-recursive ControlNet composition model that replaces recursive chaining with explicit parallel aggregation for improved performance, stability, and control. Also provides flexible LoRA utilities, including a sequential loader stack (up to 10 LoRAs) and a block-weight-enabled loader for fine-grained layer control. Built for Flux-based workflows, reusable pipeline construction, and efficient experimentation with modern diffusion models."
authors = [
    { name = "J. L. Córdova", email = "jose.l.cordova@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = [
    "comfyui",
    "comfyui-nodes",
    "comfyui-workflows",
    "stable-diffusion",
    "diffusion",
    "flux",
    "flux-workflows",
    "lora",
    "lora-loaders",
    "lora-stack",
    "controlnet",
    "controlnet-apply",
    "controlnet-composition",
    "controlnet-workflows",
    "controlnet-caching",
    "parallel-controlnet",
    "inpainting",
    "inpainting-pipeline",
    "masking",
    "image-padding",
    "outpainting",
    "image-generation",
    "workflow",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"
Repository = "https://github.com/Damkohler/jlc-comfyui-nodes"
Issues = "https://github.com/Damkohler/jlc-comfyui-nodes/issues"

[tool.comfy]
supported_comfyui_version = ">=0.2"
PublisherId = "damkohler"
DisplayName = "JLC ComfyUI Nodes"
Icon = "https://raw.githubusercontent.com/Damkohler/jlc-comfyui-nodes/main/assets/icons/jlc-comfyui-nodes_Logo-0512.png"
Category = "nodes"
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"