[project]
name = "jlc-comfyui-nodes"
version = "1.3.0"
"description" = "A collection of workflow-focused ComfyUI nodes for structured, deterministic image generation pipelines. Introduces the JLC ControlNet Orchestrator (Base & Advanced), a non-canonical execution model that replaces recursive ControlNet chaining with slot-based independent evaluation and deterministic weighted fusion, ensuring order-invariant behavior (alpha=1), copy-based isolation, early bypass of inactive slots, and native fallback for single-ControlNet cases. The Advanced variant integrates built-in ControlNet loading and persistent caching, eliminating external loader and Apply nodes while preserving correctness. Also includes JLC ControlNet Composition for parallel aggregation, JLC Padded Image and JLC Padded Latent for unified canvas and mask generation in inpainting/outpainting workflows, and additional utilities for scalable pipeline design."
authors = [
    { name = "J. L. Córdova", email = "jose.l.cordova@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = [
    "comfyui",
    "comfyui-nodes",
    "comfyui-workflows",
    "workflow",
    "workflow-optimization",
    "diffusion",
    "image-generation",
    "stable-diffusion",
    "flux",
    "flux-workflows",
    "controlnet",
    "controlnet-apply",
    "controlnet-caching",
    "controlnet-composition",
    "controlnet-orchestration",
    "controlnet-workflows",
    "parallel-controlnet",
    "streaming-controlnet",
    "deterministic-execution",
    "low-variance",
    "memory-optimized",
    "non-recursive",
    "composition",
    "inpainting",
    "inpainting-pipeline",
    "masking",
    "outpainting",
    "image-padding",
    "lora",
    "lora-loaders",
    "lora-stack",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"
Repository = "https://github.com/Damkohler/jlc-comfyui-nodes"
Issues = "https://github.com/Damkohler/jlc-comfyui-nodes/issues"

[tool.comfy]
supported_comfyui_version = ">=0.2"
PublisherId = "damkohler"
DisplayName = "JLC ComfyUI Nodes"
Icon = "https://raw.githubusercontent.com/Damkohler/jlc-comfyui-nodes/main/assets/icons/jlc-comfyui-nodes_Logo-0512.png"
Category = "nodes"
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"