[project]
name = "jlc-comfyui-nodes"
version = "2.0.0"
description = "A ComfyUI custom-node collection focused primarily on ControlNet execution and composition improvements. Its centerpiece is the JLC non-recursive ControlNet family, including Composition and Orchestrator nodes that replace recursive multi-ControlNet chaining with isolated ControlNet evaluation and deterministic weighted fusion while preserving native single-ControlNet behavior. These nodes are intended for ControlNet-heavy Flux and diffusion workflows where recursive chaining can become difficult to reason about, slow, or memory-sensitive. The collection also includes practical workflow tools that support these pipelines, including graph-safe ControlNet Apply variants, shared-cache ControlNet loading, dynamic ControlNet Aux preprocessing, padded image/latent helpers for inpainting and outpainting, dynamic LoRA loaders, seed utilities, and stage-boundary VRAM cleanup helpers."
authors = [
    { name = "J. L. Córdova", email = "jose.l.cordova@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

keywords = [
    "comfyui",
    "comfyui-nodes",
    "comfyui-workflows",
    "workflow",
    "workflow-optimization",
    "diffusion",
    "image-generation",
    "stable-diffusion",
    "flux",
    "flux-workflows",
    "controlnet",
    "controlnet-apply",
    "controlnet-caching",
    "controlnet-composition",
    "controlnet-orchestration",
    "controlnet-workflows",
    "parallel-controlnet",
    "streaming-controlnet",
    "deterministic-execution",
    "low-variance",
    "memory-optimized",
    "non-recursive",
    "composition",
    "inpainting",
    "inpainting-pipeline",
    "masking",
    "outpainting",
    "image-padding",
    "lora",
    "lora-loaders",
    "lora-stack",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"
Repository = "https://github.com/Damkohler/jlc-comfyui-nodes"
Issues = "https://github.com/Damkohler/jlc-comfyui-nodes/issues"

[tool.comfy]
supported_comfyui_version = ">=0.2"
PublisherId = "damkohler"
DisplayName = "JLC ComfyUI Nodes"
Icon = "https://raw.githubusercontent.com/Damkohler/jlc-comfyui-nodes/main/assets/icons/jlc-comfyui-nodes_Logo-0512.png"
Category = "nodes"
Homepage = "https://github.com/Damkohler/jlc-comfyui-nodes"